--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ target/
 # Ignore Spring Boot application properties
 /src/main/resources/application.properties
 
+/src/main/resources/application.yml
+
 ### STS ###
 .apt_generated
 .classpath
